# llm-optimizer-compose

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
bench/: compare.py  prompts.jsonl  runner.py
bench/results/: .gitkeep
benchmarks/: runner.py
config/: engines.yaml  litellm.yaml  openwebui.env  prometheus.yml
config/grafana/dashboards/: llm-engines.json
configs/: AGENTS.md  m7-optimized.yaml
engines/: .gitkeep
examples/: AGENTS.md
paper/: main.bbl  main.blg
scripts/: start.ps1  start.sh
src/miniforge/: cli.py
src/miniforge/core/: engine.py  memory.py
src/miniforge/core/backends/: airllm.py  llama_cpp.py
src/miniforge/generation/: tools.py
src/miniforge/launcher/: __init__.py  engine_manager.py  engines.py
src/miniforge/server/: __init__.py  metrics.py  openai_server.py
src/miniforge/utils/: config.py
tests/: AGENTS.md  test_core.py
